Restart & Run All

--- a/10_LA_intro.ipynb
+++ b/10_LA_intro.ipynb
@@ -164,14 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEZCAYAAABrUHmEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XucHHW55/HPNwkBhBxQUHAmF4dBQfByZCUGPUpHTzQo\nGtZrkFHUo+Z4FtfL0QWPzmbWuB7Zdb2gq26OrEcBjVc0eCWKg4sabkJETUgc2lxmYriFm4CE5Nk/\nqibpdLpnqmd6qrpnvu/Xq1/TVfXrqmdqevrp36V+pYjAzMwsi2lFB2BmZu3DScPMzDJz0jAzs8yc\nNMzMLDMnDTMzy8xJw8zMMnPSMGsTkn4o6Q1Fx2FTm5OGZSapLOmFOR5vj6TjRth+kKT/JWmrpPsk\n3SbpE3nFNxEkLZf0SPr73J/+fB9ARLw0Ii5Jy50r6f+Nsq+fS3rLOGL5k6QHJd0r6W5J10haJkkZ\nXz8v/Rv6c2YSmVF0AGYjGO3K038BTgGeHRE7JM0FXjDxYe1P0vSI2N3EXa6KiDeOdlhGPz/jFcDL\nIuLnkmYBpwMXAc8BsiSj4RgzJRlrD/4GYE0h6UxJN0namX4jfXrFtvMl/TH91vw7SWdVbOuW1C/p\nHkm3S/pauv5qkg+b36ave02Nwz4buDwidgBExJaIuLRi38+SdGP6TXmVpK9J+nC67YBv6pU1G0kv\nlfSb9LWbJS2vKDf8DfotkjYDP0vXL5D0y/Qc3CTp9IrXvEnSQPq7DEg6ewzn+OfpMU8EPg+cltZG\n7q5R9iPA84HPpse8KF3/XEnXpTFeK+m00Q4LEBH3R8T3gdcB50o6abTzBFyd/rwnjeE5ko6T9DNJ\nd6Z/70sl/U2j58IKFBF++JHpAZSBF9ZY/yxgB8mHuIA3pGUPSre/Cjgmff4a4IGK5a8CH0ifzwSe\nW7HfPUDXCPF8ENgMvAN4WtW2g4A/Af8ZmJ7G8Ajw4XT7ucAvql6zGzguff4C4OT0+dOA7cAr0uV5\naWz/DhwKHAx0AHcCL0nLvChdPgp4DHAvcHy67RjgqXV+p+XAV+ps+znwlnrxj1Q+XX4scDfwepIv\njEvT5cc2+PfeDCzLeJ52A6p4bXd6bmak56Yf+ETR720/sj9c07BmeBvwhYi4IRKXAH8FFgBExLdj\nX23gm8AmYH762l3APEmdEfFIRPyqat8jNW18FPgYyYfg9ZK2SRpu1lkAzIiIiyJid0R8G7h+lN9j\n77Ei4hcR8fv0+e+AVSTNM3uLAMsj4qGI+CvQA/wgIn6SvuZnwA3AS9Pyu4GnSzokInZExPoR4nhd\n2oewM/157ChxZ/UyYGNEfDUi9kTEKmAD8PIG9zMEPA4ynSfY/7wORMTPIuLRiLgL+GSN8tbCnDSs\nGeYB/5x+wN0taScwm+TbN5LeWNF0tRM4GTg6fe37Sd6H10m6RdKbsx40TVCfj4jnA0eSJJH/K+mE\n9NiDVS/ZnHXfaVPKVWkTyj3AsoqYh22reD4PeG3VOXge8MSIeJCkWecdwHZJV6Qx1vP1iHhcRDw2\n/fnnrHGPooMDz8FmoLPB/XSS1FCynqe9JD0hbSbclpa/dKTy1nqcNKwZtgL/Pf2AG/6wOzwivp52\nTq8E/ild/1jg9+xrK789It4eEZ3APwKf0wgjpuqJiL9GxOeAncBJJM0ks6uKza14/heSZiMAanyb\nvwz4LtAZEUcC/4cDaz2VHdFbSZqVKs/BrIj4H2l8ayLixcCxwK3AvzX6O45w7KxlhoAnVa2by4HJ\ntS5Jp5Ikn+H+oJHOU60YP0rStHdyWr4Hd5S3FScNa9RMSQdXPKaTfAD+o6T5AJIOSztIDwMOI/mQ\nuFPStLQm8bThnUl6taThb7r3pGX3pMt/BkYacvsuSadLOkTSdEnnAocDvwF+DeyS9E5JMyS9kn1N\nYgDrgJMlPUPSwSR9CZUfcocDOyNiV/p7vb768FXLlwIvl/Ti9Pc8JI2tI/12/QpJjyFpjnuApLlq\nPHYAsyUdNEqZyvP3Q+DJkpam5+t1wFOB7492MEmzJJ0JfA24JCL+kG4a6TzdQfK37K5YN4vk978/\n/bu/f7RjW4spulPFj/Z5kHSM7k4fe9Kfwx3LLwauI2m2GAS+DhyWblsB3AXcDnyc/Tt0LyRp5rmP\npK/jHyqO93aSb8d3A6+uEc/bSPoNdqZl1gJnVGw/hSSB3EvyYfe14XjT7R8g+WDbTPJhV9kR/kqS\njvR7gdUkQ02/km4b7uCdVhXPqSQdu3eRfGBfQVLbOTZdPxznVcCJdc7xSB3hV1Wct4PS/d8F3F6n\n/AKSWs1dwKfSdc+tOGfXA6eN8vf+S3oOdgK/JKkNVnZs1z1P6fa+9O9+N0nSPik9/n3p3+Y9wJai\n39t+ZH8o/cPmStLFwJnAjoh4Rp0yFwFnkLxp3xQRN+cYok1Ckr4EbI2I/1p0LGbtqqjmqS8BL6m3\nUdIZQHdEPJmkY+0LeQVmZmb1FZI0IuIakupuPUuAr6RlrwWOkHRMHrHZpOZ7G5uNU6tOI9JJMhpl\n2GC6bkcx4dhkEBFjnofJzBIePWVmZpm1ak1jEJhTsTybGmPJJbm5wcxsDCJiTNfHFFnTEPUv6lkN\nvBGSSeCAeyKdhqJa0cPPJtNj+fLlhccwmR4+nz6frfoYj0JqGpK+CpSAoyRtIRmbPpNkZoiVEfHD\n9OKwP5IMuc08tYSZmU2cQpJGRFRfXVurzHl5xGJmZtm5I9z2KpVKRYcwqfh8NpfPZ2so5IrwZpEU\n7Ry/mVkRJBFt2BFuZmZtxknDzMwyc9IwM7PMnDQmuXK5TE9PDwsXLqSnp4dyuVx0SGbWxtwRPomV\ny2UWLVrEwMDA3nXd3d2sWbOGrq6uAiMzsyK5I9xq6u3t3S9hAAwMDNDb21tQRAnXfszaV6vOPWVN\nMDhY+9bPQ0NDOUeyT63az9q1a137MWsTrmlMYp2dnTXXd3R05BzJPq1a+zGzbJw0JrEVK1bQ3d29\n37ru7m5WrFhRUEStWfsxs+zcPDWJdXV1sWbNGnp7exkaGqKjo4MVK1YU2gzUirUfM8vOo6csVx7R\nZVa88YyectKw3JXL5Zaq/ZhNNU4aZmaWma/TMDOzXBSSNCQtlrRB0kZJ59fYfqSk70haJ2mtpJOK\niNPMzPaXe9KQNA34LPAS4GTgbEknVhX7F+CmiHgmcC5wUb5RmplZLUXUNOYDmyJic0TsAlYBS6rK\nnARcBRARtwJPkvT4fMM0M7NqRSSNTmBrxfK2dF2ldcArASTNB+YCs3OJzszM6mrVi/s+Bnxa0m+A\nW4CbgN21Cvb19e19XiqVfB9hM7Mq/f399Pf3N2VfuQ+5lbQA6IuIxenyBUBExIUjvKYMPD0iHqha\n7yG3ZmYNarcht9cDx0uaJ2kmsBRYXVlA0hGSDkqfvw24ujphmJlZ/nJvnoqI3ZLOA64kSVoXR8R6\nScuSzbESeCrwZUl7gN8D/5B3nGZmdiBfEW5mNsW0W/OUmZm1KScNMzPLzEnDzMwyc9IwM7PMnDTM\nzCwzJw0zM8vMScPMzDJz0jAzs8ycNMzMLDMnDTMzy8xJw8zMMnPSMDOzzJw0zMwsMycNMzPLzEnD\nzMwyc9IwM7PMCkkakhZL2iBpo6Tza2z/G0mrJd0s6RZJbyogTDMzq5L7nfskTQM2Ai8ChkjuGb40\nIjZUlPkA8DcR8QFJRwO3AsdExKNV+/Kd+8zMGtRud+6bD2yKiM0RsQtYBSypKhPArPT5LOCu6oRh\nZmb5KyJpdAJbK5a3pesqfRY4SdIQsA54V06xmZlNWuVymZ6ennHtY0aTYmm2lwA3RcQLJXUDayQ9\nIyIeqC7Y19e393mpVKJUKuUWpJlZO+jv7+fyyy/nkksuYefOnePaVxFJYxCYW7E8O11X6c3AvwJE\nxICkMnAicEP1ziqThpmZHahUKvHFL35x3AkDimmeuh44XtI8STOBpcDqqjKbgb8HkHQM8BTgtlyj\nNDObRAYHq7+bj03uNY2I2C3pPOBKkqR1cUSsl7Qs2RwrgY8A/y7pt+nL/ktE3J13rGZmk0VnZ3XX\n8djkPuS2mTzk1swsm3K5zKJFixgYGABoqyG3ZmaWs66uLtasWcM555wzrv24pmFmNsW028V9ZmbW\nppw0zMwsMycNMzPLzEnDzMwyc9IwM7PMnDTMzCwzJw0zM8vMScPMzDJz0jAzs8ycNMzMLDMnDTMz\ny8xJw8zMMnPSMDOzzJw0zMwss0KShqTFkjZI2ijp/Brb3yfpJkm/kXSLpEclHVlErGZmtk/u99OQ\nNA3YCLwIGCK5Z/jSiNhQp/yZwLsj4u9rbPP9NMzMGtRu99OYD2yKiM0RsQtYBSwZofzZwNdyiczM\nzEZURNLoBLZWLG9L1x1A0qHAYuDbOcRlZmajmFF0AKN4OXBNRNxTr0BfX9/e56VSiVKpNPFRmZm1\nkf7+fvr7+5uyryL6NBYAfRGxOF2+AIiIuLBG2e8A34iIVXX25T4NM7MGjadPo4ikMR24laQjfDtw\nHXB2RKyvKncEcBswOyIeqrMvJw0zswaNJ2nk3jwVEbslnQdcSdKncnFErJe0LNkcK9OiZwE/qZcw\nzMwsf7nXNJrJNQ0zs8a125BbMzNrU04aZmaWmZOGmZll5qRhZmaZOWmYmVlmThpmZpZZq08jMroT\nToC5c/c95szZ//mhhxYdoZnZpNH+12n84Q+wZUvtx7ZtcMQR9ZPK3LlwzDEwzRUuM5s62moakWYa\n9eK+PXvg9tvrJ5UtW+Dee2H27PpJZe5cOPzw/H4pM7MJlmvSkPTiiLhS0ruBncA9EfG9sRx8vJpy\nRfhDDyU1kloJZevW5Ochh9RPKHPnwhOfCDPav6XPzKaGQmoakp5NkjROiYhvjmkn45TLNCIRcNdd\n9WsqW7fCHXckiaNeUpk7N2km05j+RmZmTZVb0pC0CngA+BXwy4i4dSwHbZaWmXvqkUdgcDBJIps3\n76uhDP/cvDlJGCMllc5OmDmz6N/EzKaAvJunjgcWAKeRTG/+PaA3Ih4ZSwDj0TJJYzQRSd9Jveav\nLVtg+3Y4+uj6SWXOnGS7aytmNk551jSek75mbbr8GmAdcGZEfGIsAYxH2ySNLB59NEkctRLK8OPh\nh2vXVobXeYixmWWQZ9L4ELALOAX4C7AF6AdmRcQVYwlgPCZV0sji/vsPbPoabYhxdQe+hxibTXl5\nJo2TSRLE2op1bwVui4irGtjPYuBT7LsJU61bvZaATwIHAXdExMIaZaZW0hjNnj2wY8eBCaWyn8VD\njM2mvLa6TkPSNGAjSX/IEHA9sDQiNlSUOYKks/3FETEo6eiIuLPGvpw0GjXSEOPhGoyHGJtNam11\nu1dgPrApIjbD3hFZS4ANFWVeD3w7IgYBaiUMG6NDD4UnPzl51FJviPGNN3qIsZkVkjQ6ga0Vy9tI\nEkmlpwAHSfo5cDhwUURcUmtnPT09rFixgq6urgkJdsqRklFaRx8Np5xSu0zlEOPhx7p18P3v72sO\ng/oJxUOMzdrWqElD0ntH2j5Bo6ZmkHS2vxA4DPi1pF9HxB+rC1522WWsXbuWNWvWOHHkZeZM6OpK\nHrXUGmK8dSv8+MfZhhgP12A8xNis5WSpacxKf54AnAqsTpdfDlw3hmMOAnMrlmen6yptA+6MiIeB\nhyX9AngmcEDSABgYGGDJkiVcdNFFlEqlMYRkTSXBkUcmj2c8o3aZRx+FoaH9R4Nt3Ag//enIQ4w9\ni7FZw/r7++nv72/KvjJ3hKcf3C+LiPvT5VnADyLiBQ0dUJoO3ErSEb6dJPGcHRHrK8qcCHwGWAwc\nDFwLvC4i/lC1r73BL1y4kKuuyjyAy9rBWIYYexZjs1Hl1RF+DFB51fcj6bqGRMRuSecBV7JvyO16\nScuSzbEyIjZI+gnwW2A3sLI6YVTr6OhoNBRrdbNmwUknJY9a6g0x/uUva89iXO/CyFmzau/fzA7Q\nSE3jg8BrgcvTVWcBX4+If52g2LLEFADd3d0t0adRLpfp7e1lcHCQzs5Od9C3gqxDjEcaCeYhxjbJ\n5Hlx3ynA89PFX0TETWM5aLNIinPOOaclPpzL5TKLFi1iYGBg77pWSWY2guohxrUmnLzjDjj22JFH\ng3mIsbWRtrq4r5la6eK+np4eLrvssgPWn3POOVx66aUFRGRNU2uIcfUsxjDyZJOzZ3uIsbWMXPo0\nJB0MvAp4UuXrIuLDYznwZDM4WD0ALDE0NJRzJNZ0HmJstlcjDbXfA+4FbgT+OjHhtK/Ozs6a691B\nPwVkHWJcPYuxhxhbG2qkI/x3EfG0CY6nIa3UPOU+DRu3ekOMh/tZPIuxNUkufRqSVgKfiYhbxnKg\nidBKSQP2jZ4aGhqio6OjJTrobRKpN8S48lE9i3Gt5OJZjKe8vJLGH4DjgTJJ85RIrquoUx+feK2W\nNMwK18gsxvUSi4cYT3p5JY15tdYPz1ZbBCcNswbVm8W4svYyPIvxaEOMrW3leZ3GY4EnA4cMr4uI\nX4zlwM3gpGE2AWoNMa7uY5FGrq14FuOWlldN463Au0gmGLwZWAD8OiJeOJYDN4OThlkBIuCee0ae\nF2z7dnj840futD/qKA8xLkheSeMWkllu10bE36aTCn40Il45lgM3g5OGWYuqHGJcr+P+4YdHTipz\n5iT9L9Z0eU1Y+HBEPCwJSQenkwqeMJaDmtkkN2NG8qE/Z079Mg88cGBC6e/ffxbjI48ceRbjJzzB\nQ4xz1khN43LgzcC7SW6OtBM4KCJeOnHhjRqTaxpmk9WePXD77fVHgm3ZAvfdN/osxgUNMW7lCUxz\nn3tK0unAEcCPI+KR0cpPFCcNsymucohxrckmt2xJrqIfbRbj6dObGlarX+zrCQvNzGrJMsT4zjtH\nnsV4zpyGZzFu9QlM8+rTMDNrL1IyEeTRR8Mpp9QuU2uI8bp1cMUVow8xHq7BVA0xnswTmBaSNCQt\nBj7Fvjv3XVi1/XSSCRJvS1d9JyI+km+UZsVq5TbxSaXRWYyHayk/+lHdIcbv27GDpwNbKh53MTkm\nMM29eUrSNGAjyT3Ch4DrgaURsaGizOnAP0fEK0bZl5unbFJq9TZxqzI8xDhNKHfffDM/+PznOeK+\n+5gHzAEOlZje1cXM7u7aHfc5DjGe8D4NSTOA1wCnpasOI7l394Mk9/H+akQ8nDHYBcDyiDgjXb6A\nZA6rCyvKnA68LyJePsq+nDRsUmr1NnEbXfUEph+54AKeNH16/ZFgg4P7z2Jcq/O+SUOMJ7RPQ9Kp\nJLd4XRMRX6uxvRt4u6R1EXF1hmN2AlsrlrcB82uUO03SzcAg8P6I+EOGfZtNCpO5TXyq6Orqqp3g\nn/rU2i+oN8T4mmv2NYkNz2JcbzRYDkOMs/RpPBwRn6i3MSIGgIskHSdpZpOG4N4IzI2IByWdAXwX\neEoT9mvWFnxTrylo2rRkFNexx8L8Wt+jqT2L8bXXwje/2dgQ43FodMLCLmB71qaoOvtYAPRFxOJ0\n+YDmqRqvKQP/ISLurlofy5cv37tcKpUolUpjDc2sZbhPw8akeohxWkPpv+EG+jdtSmoqDz7If9uz\nJ7dZbv838M2I6Jf0fJIP+2saOqA0HbiVpCN8O3AdcHZErK8oc0xE7Eifzwe+ERFPqrEv92nYpOWb\netmEeOQRdPDBuSWNc0luvnR1RJQlnRUR3234oMmQ20+zb8jtxyQtI0lCKyX9J+AdwC7gIeA9EXFt\njf04aZiZNSjP+2l8iOTaidOAk4FfRcSHxnLgZnDSMDNrXJ5XhN8GfCsivirpKKCwadHNzCx/jQ74\n/TrwtPT5ccCxzQ3HzMxa2YjNU5IOBg6PiLtG3ZE0JyK2jlaumdw8ZWbWuPE0T41Y04iIv5JcZHe2\npEPrHPxISW8H5o0lADMzax9Z+jSmA2XgPZIeDxwKHAQ8SjKNyDbgixFx74RFaWZmLWHU0VOSPglc\nFhE3SHpFRKzOJ7TRuXnKzKxxEz16ajXwwbR/41BJTwFuAX4XEbUnyDEzs0mp0es03ksyL9TJJKOo\nOkiapz4TEbdOSIQjx+OahplZgwq93auk1wFzIuLj49rR2I7tpGFm1qAJGz2V0S6SuaTMzGySy/3O\nfc3kmoaZWeOKrmmYmdkU4aRhZmaZOWmYmVlmThpmZpaZk4aZmWVWSNKQtFjSBkkbJZ0/QrlTJe2S\n5Pt2mJm1gNyThqRpwGeBl5BcWX62pBPrlPsY8JN8IzQzs3qKqGnMBzZFxOaI2AWsApbUKPdO4FvA\n7XkGZ2Zm9RWRNDqByps1bUvX7SWpAzgrIj4PjOkCFDMza75G7xGel08BlX0ddRNHX1/f3uelUolS\nqTRhQZmZtaP+/n76+/ubsq/cpxGRtADoi4jF6fIFQETEhRVlbht+ChwN/AV4e/W9PDyNiJlZ49pt\nGpHrgeMlzZM0E1hKcs+OvSLiuPTRRdKv8U+tdPMns6msXC7T09PDwoUL6enpoVwuFx2S5Sj35qmI\n2C3pPOBKkqR1cUSsl7Qs2Rwrq1+Sd4xmVlu5XGbRokUMDAzsXbd27VrWrFlDV1dXgZFZXjzLrZll\n1tPTw2WXXXbA+nPOOYdLL720gIhsLNqtecrM2tTgYO07PA8NDeUciRXFScPMMuvs7Ky5vqOjI+dI\nrChunjKzzGr1aXR3d7tPo80Ueo/wIjlpmOWvXC7T29vL0NAQHR0drFixwgmjzThpmNmUNpzIBgcH\n6ezsdCIbhZOGmU1ZbjJrnEdPmdmU1dvbu1/CABgYGKC3t7egiCY3Jw0za2seBpwvJw0za2seBpwv\n92mYWVtzn0bj3BFuZlOahwE3xknDzMwy8+gpMzPLhZOGmZll5qRhZmaZOWmYmVlmhSQNSYslbZC0\nUdL5Nba/QtI6STdJuk7S84qI08zM9pf76ClJ04CNwIuAIZJ7hi+NiA0VZR4TEQ+mz58OfCMinlpj\nXx49ZWbWoHYbPTUf2BQRmyNiF7AKWFJZYDhhpA4H9uQYn5mZ1VFE0ugEtlYsb0vX7UfSWZLWA1cA\nb8kpNjMzG8GMogOoJyK+C3xX0t8BHwEW1SrX19e393mpVKJUKuURnplZ2+jv76e/v78p+yqiT2MB\n0BcRi9PlC4CIiAtHeM0AcGpE3F213n0aZmYNarc+jeuB4yXNkzQTWAqsriwgqbvi+SnAzOqEYWZm\n+cu9eSoidks6D7iSJGldHBHrJS1LNsdK4FWS3gg8AjwEvDbvOM3M7ECesNDMbIppt+YpMzNrU04a\nZmaWmZOGmZll5qRhZmaZOWmYmVlmThpmZpaZk4aZmWXmpGFmZpk5aZiZWWZOGmZmlpmThpmZZeak\nYWZmmTlpmJlZZk4aZmaWmZOGmZll5qRhZmaZFZI0JC2WtEHSRknn19j+eknr0sc1kp5eRJxmZra/\n3O/cJ2kasBF4ETBEcs/wpRGxoaLMAmB9RNwraTHQFxELauzLd+4zM2tQu925bz6wKSI2R8QuYBWw\npLJARKyNiHvTxbVAZ84xmplZDUUkjU5ga8XyNkZOCm8FfjShEZmZWSYzig5gJJIWAm8G/q5emb6+\nvr3PS6USpVJpwuMyM2sn/f399Pf3N2VfRfRpLCDpo1icLl8ARERcWFXuGcC3gcURMVBnX+7TMDNr\nULv1aVwPHC9pnqSZwFJgdWUBSXNJEsYb6iUMMzPLX+7NUxGxW9J5wJUkSeviiFgvaVmyOVYCvcDj\ngM9JErArIubnHauZme0v9+apZnLzlJlZ49qtecrMzNqUk4aZmWXmpGFmZpk5aZiZWWZOGmZmlpmT\nhpmZZeakYWZmmTlpmAHlcpmenh4WLlxIT08P5XK56JDMWpIv7rMpr1wus2jRIgYG9s1Y093dzZo1\na+jq6iowMrOJ4Yv7zMaht7d3v4QBMDAwQG9vb0ERmbUuJw2b8gYHB2uuHxoayjkSs9bnpGFTXmdn\n7XuAdXR05ByJWetzn4ZNee7TsKlmPH0aThpmJImjt7eXoaEhOjo6WLFihROGTVpOGmZmllnbjZ6S\ntFjSBkkbJZ1fY/sJkn4l6WFJ7y0iRjMzO1DuSUPSNOCzwEuAk4GzJZ1YVewu4J3A/8w5vCmtWTee\nt4TPZ3P5fLaGImoa84FNEbE5InYBq4AllQUi4s6IuBF4tID4piz/UzaXz2dz+Xy2hiKSRiewtWJ5\nW7rOzMxanK/TMDOzzHIfPSVpAdAXEYvT5QuAiIgLa5RdDtwfEZ+osy8PnTIzG4Oxjp6a0exAMrge\nOF7SPGA7sBQ4e4TydX+xsf7SZmY2NoVcpyFpMfBpkuaxiyPiY5KWkdQ4Vko6BrgBmAXsAR4AToqI\nB3IP1szM9mrri/vMzCxfbdURLunVkn4nabekU0YoN+LFg5aQ9FhJV0q6VdJPJB1Rp9yfJK2TdJOk\n6/KOs9Vleb9JukjSJkk3S/rbvGNsFxku/D1d0j2SfpM+PlREnO1A0sWSdkj67QhlGn5ftlXSAG4B\n/iNwdb0CGS8etMQFwE8j4gTgKuADdcrtAUoR8ayImJ9bdG0gy/tN0hlAd0Q8GVgGfCH3QNtAA/+7\nv4iIU9LHR3INsr18ieRc1jTW92VbJY2IuDUiNjFC5zgZLh60vZYAX06ffxk4q0450WbvlRxleb8t\nAb4CEBHXAkek/Xa2v6z/ux4Ak0FEXAPsHKHImN6Xk/GDwBcPZveEiNgBEBF/Bp5Qp1wAayRdL+lt\nuUXXHrK836rLDNYoY9n/d09Lm1N+IOmkfEKblMb0vixiyO2IJK0BKrOdSD60PhgRVxQTVfsa4XzW\naguuNyrieRGxXdLjSZLH+vRbjFnebgTmRsSDafPKd4GnFBzTlNJySSMiFo1zF4PA3Irl2em6KWmk\n85l2kh0TETskHQvcXmcf29Ofd0i6nKQZwUkjkeX9NgjMGaWMZTiXlcPuI+JHkj4n6XERcXdOMU4m\nY3pftnPzVL12zb0XD0qaSXLx4Or8wmorq4E3pc/PBb5XXUDSYyQdnj4/DHgx8Lu8AmwDWd5vq4E3\nwt4ZEe4Zbha0/Yx6Livb3CXNJ7lswAmjPlH/s3JM78uWq2mMRNJZwGeAo4HvS7o5Is6Q9ETg3yLi\nzIjYLekXnvmcAAABSklEQVQ84Er2XTy4vsCwW9mFwDckvQXYDLwWoPJ8kjRtXZ5O2TIDuCwiriwq\n4FZT7/1WebFqRPxQ0ksl/RH4C/DmImNuVVnOJfBqSe8AdgEPAa8rLuLWJumrQAk4StIWYDkwk3G+\nL31xn5mZZdbOzVNmZpYzJw0zM8vMScPMzDJz0jAzs8ycNMzMLDMnDTMzy8xJw8zMMnPSMDOzzJw0\nzMwss7aaRsSs1UmaTjK1xXEk007PBz4eEeVCAzNrEtc0zJrrmcC3gNtIJor7JrC90IjMmshJw6yJ\nIuI3EfEIcBpwdUT0R8TDRcdl1ixOGmZNJOlUSUcBJ0dEWdLzi47JrJncp2HWXIuBPwO/Sqfyv7Pg\neMyaylOjm5lZZm6eMjOzzJw0zMwsMycNMzPLzEnDzMwyc9IwM7PMnDTMzCwzJw0zM8vMScPMzDL7\n/7kdUvCcWTU3AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10d05bf90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Linear Least Squares Problem\n",
     "N = 10\n",
@@ -404,14 +415,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#A x = b\n",
     "\n",
@@ -513,14 +534,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def matrix_matrix_product(A, B):\n",
     "    C = numpy.zeros((A.shape[0], B.shape[1]))\n",
@@ -559,14 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "[ 3.09805818  3.66916175  2.40284005  4.04266693  2.8966773 ]\n",
+      "[[ 2.55834418  2.99852619  2.57897492  1.80512424  2.18615731]\n",
+      " [ 3.24329279  3.5683716   3.35386056  2.60451724  3.2647865 ]\n",
+      " [ 2.01294494  2.4652074   1.91963552  1.73565015  2.23257946]\n",
+      " [ 3.24777807  3.73967814  3.19871151  2.57001469  3.19403766]\n",
+      " [ 2.56628028  2.79615838  2.20953113  1.71614199  2.69285006]]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 10\n",
     "m = 5\n",
@@ -645,14 +691,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.00000000e+00   1.20810844e-16   1.95291958e-16]\n",
+      " [  1.18778707e-16   1.00000000e+00  -3.46240248e-17]\n",
+      " [  2.05515867e-17   5.12916976e-17   1.00000000e+00]]\n",
+      "3\n",
+      "range\n",
+      "[ 0. -0.  0.]\n",
+      "[ 1.34442518  0.27168664 -0.16212841]\n"
+     ]
+    }
+   ],
    "source": [
     "m = 3\n",
     "for n in xrange(100):\n",
@@ -880,14 +940,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.46289274571 1.65908786282 1.12995606178 0.954016525471\n",
+      "1.74086252519 1.77311021177\n",
+      "0.0954016525471 0.0954016525471\n"
+     ]
+    }
+   ],
    "source": [
     "m = 10\n",
     "p = 4\n",
@@ -905,7 +975,7 @@
     "ell_p = 0.0\n",
     "for i in xrange(m):\n",
     "    ell_p += numpy.abs(x[i])**p\n",
-    "ell_p = (ell_2)**(1.0 / p)\n",
+    "ell_p = (ell_p)**(1.0 / p)\n",
     "\n",
     "ell_infty = numpy.max(numpy.abs(x))\n",
     "\n",
@@ -1010,14 +1080,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.92080962648\n",
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "A = numpy.array([[1, 2], [0, 2]])\n",
     "print numpy.linalg.norm(A, ord=2)\n",
@@ -1140,11 +1219,10 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
