--- a/11_LA_QR.ipynb
+++ b/11_LA_QR.ipynb
@@ -299,14 +299,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 5]\n",
+      "[3 4 0]\n",
+      "[ 0.  0.  5.]\n",
+      "[ 3.  4.  5.]\n"
+     ]
+    }
+   ],
    "source": [
     "Q = numpy.array([[1, 0],[0, 1],[0, 0]])\n",
     "P = numpy.dot(Q, numpy.conjugate(numpy.transpose(Q)))\n",
@@ -344,14 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 5]\n",
+      "[ 3.  4.  0.]\n",
+      "[0 0 5]\n",
+      "[ 3.  4.  0.]\n"
+     ]
+    }
+   ],
    "source": [
     "q = numpy.array([0, 0, 1])\n",
     "P = numpy.outer(q, q.conjugate())\n",
@@ -566,14 +588,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.05976777 -2.5615304  -0.31773478]\n",
+      " [-0.61769015  1.02905897 -1.19488169]\n",
+      " [-0.31325944  0.56453251 -1.39067349]\n",
+      " [-0.4319849  -0.35179756 -0.66671925]]\n",
+      "[[-0.79224234 -0.90210063  0.51579639]\n",
+      " [-0.46176181  0.3624063  -0.39617721]\n",
+      " [-0.23418092  0.19881284 -0.74245638]\n",
+      " [-0.32293559 -0.12389344 -0.16048747]]\n",
+      "[[ 1.3376813   0.          1.34445026]\n",
+      " [ 0.          2.83951736  0.        ]\n",
+      " [ 0.          0.          1.44901292]]\n",
+      "[[  0.00000000e+00   0.00000000e+00  -5.55111512e-17]\n",
+      " [  0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
+      " [  0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
+      " [  5.55111512e-17   0.00000000e+00   0.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Implement Classical Gram-Schmidt Iteration\n",
     "\n",
@@ -727,14 +771,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.128482   -0.95200912 -0.35990692 -1.3216732 ]\n",
+      " [ 0.63724889 -1.88477409 -1.5692563  -1.16919405]\n",
+      " [ 1.10837873  1.34587598 -1.29721023 -0.8887224 ]\n",
+      " [ 0.28728545 -1.50660115  1.61680994 -1.8412081 ]]\n",
+      "[[ 1.31667388 -0.0150671  -1.46359669 -1.58676324]\n",
+      " [ 0.          2.92227598 -0.30917534  1.71642235]\n",
+      " [ 0.          0.          2.15666929 -0.60523199]\n",
+      " [ 0.          0.          0.          1.209744  ]]\n",
+      "Modified = \n",
+      "[[  0.00000000e+00   0.00000000e+00  -1.11022302e-16   0.00000000e+00]\n",
+      " [  0.00000000e+00   2.22044605e-16   0.00000000e+00   0.00000000e+00]\n",
+      " [  0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
+      " [  0.00000000e+00  -2.22044605e-16   0.00000000e+00   0.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Implement Modified Gram-Schmidt Iteration\n",
     "def mod_GS(A):\n",
@@ -1038,14 +1102,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A = \n",
+      "[[-1.17557793 -2.25090135 -1.1601722 ]\n",
+      " [ 1.05601332 -0.00317864  0.03935271]\n",
+      " [-0.2463388   0.76493267  1.07127877]\n",
+      " [ 0.65336898 -0.72078215 -0.97119428]\n",
+      " [ 1.05747028 -1.87863012 -1.05453788]]\n",
+      "Householder (reduced) Q = \n",
+      "[[-0.58036675 -0.72299901 -0.10786494]\n",
+      " [ 0.52133934 -0.00075518 -0.2526809 ]\n",
+      " [-0.1216141   0.24553729 -0.70796737]\n",
+      " [ 0.32255933 -0.23125946  0.53845585]\n",
+      " [ 0.52205862 -0.60291158 -0.36519175]]\n",
+      "Householder (full) R = \n",
+      "[[  2.02557765e+00  -1.58549445e-03  -3.00239485e-01]\n",
+      " [  2.22044605e-16   3.11455687e+00   1.96220347e+00]\n",
+      " [ -2.77555756e-17  -1.11022302e-16  -7.81068898e-01]\n",
+      " [  1.11022302e-16   2.22044605e-16   1.66533454e-16]\n",
+      " [  2.22044605e-16   4.44089210e-16  -8.32667268e-17]]\n",
+      "Check to see if factorization worked...\n",
+      "[[  2.22044605e-16   4.44089210e-16   0.00000000e+00]\n",
+      " [  2.22044605e-16   2.17274115e-16   1.66533454e-16]\n",
+      " [  1.38777878e-16   2.22044605e-16   8.88178420e-16]\n",
+      " [  1.11022302e-16   4.44089210e-16   5.55111512e-16]\n",
+      " [  4.44089210e-16   2.22044605e-16   6.66133815e-16]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Implementation of Householder QR Factorization\n",
     "def householder_QR(A, verbose=False):\n",
@@ -1189,14 +1284,167 @@
     "\\end{align*}\n",
     "reducing the least-squares calculation to one of finding the QR factorization and backwards substitution."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "for i in xrange(n):\n",
+    "    print i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n =5\n",
+    "N =10\n",
+    "A = numpy.zeros([n,n])\n",
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = numpy.zeros(10)\n",
+    "A = numpy.zeros([10,5])\n",
+    "for i in xrange(10):\n",
+    "    for j in xrange(5):\n",
+    "        A[i,j] = 1\n",
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "[[  3.15251974e+15  -6.30503948e+15   3.15251974e+15]\n",
+      " [ -6.30503948e+15   1.26100790e+16  -6.30503948e+15]\n",
+      " [  3.15251974e+15  -6.30503948e+15   3.15251974e+15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[1,2,3],\n",
+    "[4,5,6],\n",
+    "[7,8,9]]\n",
+    "a = numpy.size(A)\n",
+    "print a\n",
+    "B = numpy.linalg.inv(A)\n",
+    "print B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "numpy.linalg.lstsq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   1.   2.   3.   4.   5.   6.   7.   8.   9.  10.  11.  12.  13.  14.\n",
+      "  15.  16.  17.  18.  19.  20.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = numpy.linspace(0,20,21)\n",
+    "print t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
