--- a/13_LA_eigen.ipynb
+++ b/13_LA_eigen.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "init_cell": true
@@ -185,22 +185,6 @@
    "metadata": {},
    "source": [
     "When an eigenvalue has algebraic multiplicity that equals its geometric then it is called non-defective and otherwise defective.  This property is also inherited to the matrix so in the above example $A$ and $B$ are non-defective and defective matrices respectively."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Determinant and Trace\n",
-    "\n",
-    "Two important properties of matrices have important relationships with their eigenvalues, namely the determinant and trace.  The determinant we have seen, the **trace** is defined as the sum of the elements on the diagonal of a matrix, in other words\n",
-    "$$\n",
-    "    \\text{tr}(A) := \\sum^m_{i=1} A_{ii}.\n",
-    "$$\n",
-    "\n",
-    "The relationship between the determinant and the eigenvalues is not difficult to guess due to the nature of the characteristic polynomial.  The trace of a diagonal matrix is clear and provides another suggestion to the relationship.\n",
-    "\n",
-    "*Theorem:* The determinant $\\det(A)$ and trace $\\text{tr}(A)$ are equal to the product and sum of the eigenvalues of $A$ respectively counting algebraic multiplicity."
    ]
   },
   {
@@ -441,11 +425,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.21431974338\n",
+      "lam 5.21431974338\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEZCAYAAABrUHmEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X+YXFWd5/H3J+GHEEQRHSWJaULYGM3Csui0zApDRtQE\nf2UVdMgPkDCIszrBHZ5xYBnzdGcy48LKMDrAKg4x0UBoREXJaHwSlcgGRFDRKBCCEPLbKL9UgiIk\n3/3jngo3ner0vZ3qvlXVn9fz1NP3nHvr1LeKUN+655x7jyICMzOzIkZUHYCZmbUOJw0zMyvMScPM\nzApz0jAzs8KcNMzMrDAnDTMzK8xJw6zJSFok6QlJdw3gub+TdHTjo2oMSR+Q9P+qjsMGzknDCpM0\nU9I96Ytpi6RvSHpT1XG1E0knA6cBoyPipLLPj4gXR8SjDQ+ssXxxWAtz0rBCJF0EXAn8E/AnwDjg\nGuBdVcaVJ2lk1TE0wNHAoxHxh6oDMavHScP6JelwYD7w4Yj4ekT8PiJ2RsQ3I+KSdMxBkj6VzkA2\nS/pXSQemfadK2iTpIknb0zHnpn2dkrZJUu713iPpp2lbki6R9AtJv5bUI+mlaV+HpF2SzpO0AfhO\nqj9H0qPp+I9LWi/pzSXaO0fSBkm/knRpLq4Rki5Nz/1NOusak/ZNkrRC0uOSHpD0vn18nkdJ+no6\ndp2k81P9ecC/A38m6beSuvp4/nmS7k/PXy5pXG7fLknHpO2XSVqWYv2BpAX5rqF9xZy6yK6W9B8p\nlu9LGp/2/V9Jn+wV09ck/c+0fXH6jH4r6eeS/nsf76P2eY/I1d2WPod+36tVJCL88GOfD2Aq8Edg\nxD6O+UfgTuDI9LgDmJ/2nQo8B3QBI4HTgR3AS9L+h4DTcm19CfhY2v5oavco4EDgM8DStK8D2AUs\nBg4BDgZeC/wO+DPgAOCTwLPAm0u0dy1wEHA88AfgNWn/x4CfAsem8nHAEcChwEbgHEDAfwF+BUzq\n47O6HbgqvX7t2Clp3weA2/fxOU8H1gETyX70XQrckdu/EzgmbfcAS3Ofy8Za233E/OtazMCiVH59\nep3rc5/TKcCG3Gu+FHgGeGUqn5Hbfh/wdK78gVwMHSneEbm2bgPOK/Je/ajo+6DqAPxo/gcwE9ja\nzzG/AKbmym8DHknbp5IlifyXw3agM20vABam7RenL5mxqXw/8Be55x1FSmC5L52O3P55wA258iHs\nmTSKtHdUbv8PgPen7bXAO+u89/cD3+tV91lgXp1jx5Il0ENzdZ8APp+2+0sa3wTm5Moj0mf76lTe\nBRyT6v9ISnC5z/n2IjGTJY3P5fadDtyfKz8KnJy2zwe+vY+Y7wXe1fv9FUga+3yvflTzcPeUFfE4\n8PJ8N0Ido8l+udZsSHW724iIXbnyM8BhaXsp8J7UnfVe4EcRsTnt6wBuUTab6AmyL/3ngFfm2tqc\n2x4NbKoVIuL3Kf6aIu1t7yPOVwOP1HnvHcBJtTYlPUmWaF9V59jRwBMR8UyubgMwps6x9XQAn87F\n/zjZwHLv57+C7Kwu/9lsym33FXP+c/hlbjv/OQDcBMxI2zOBG2o7UvfevZKeTO1OBl5e8P3lFX2v\nNoScNKyI75P9Wq/bN51sIfufvKYD2Fqk8Yh4gOyL8+1kX0RLc7s3AqdHxMvS44iIGBUR2/JN5La3\nkf2aB0DSIWTdZWXa68smYEIf9at6tXl4RHykzrFbgZdJGpWrG0f2+RWxEfhQr9c6LCJ6T8/9NfA8\nuc+CLOn1F/PfFIzjRuDMNMbwRuArAKn8ObLxryMi4gjgPrIusN52pL+H5uryiXZTwfdqQ8hJw/oV\nEb8lG4+4RtJ0SYdIOkDS6ZIuS4f1AB+X9HJJLyfrJlpS4mWWko03nALcnKu/FvhEbQBU0iskvTu3\nv/eX0ZeBd0k6KZ25dPfaX7a9vOuABZKOTc89TtIRwH8AEyXNTp/LgZLeIGlS7wbSGdSdwP+WdLCk\n44G/ovhndS1wqaTXpRheIunMOq+zC/gq0J3+e00iG7+o6Svm1xQJIiJ+QvbL/zrgW+nfCMAosi6y\nx9LEgTnAf+6jjcfIkuXsdOx57JmUP1vkvdrQaqmkIelQSYslXStpZtXxDCcRcSVwEfBxsoHbjcCH\nga+lQ/4J+CGwhmyw+IfAP++ryV7lHuDPge9ExBO5+k8DXwdWSPoN2RduZ1/tRMT9wFyy7pOtwG9T\nvM8OpL1e5SvJBulrz70OOCQiniYbwzkrveZW4DKywfR6ZgDj03FfIRtHuK2PY/cMJuJrqe0eSU+R\nfd7T+oh3Ltkg9TbgC2SJ+dnUTl8xH1wkjmQp2TUlu7um0lnjvwB3kXVvTQZW76ONDwJ/DzxGNlh/\nR4n3ahVQROtcZyNpNvBkRHxDUk9EnFV1TNbcUjfQU2QDwhuqjqdK6azwlRExp+pYrHVVeqYhaaGy\neftretVPk7RW2Rz2i3O7xvLCYN7OIQvUWoqkd6YumVFkv3rXDMeEIek1ko5L251k3WBfrTYqa3VV\nd08tIrsGYLc0Q+fqVD8ZmJHrG97ECwN7++p7tuFtOll3y2ayPvLhekb6YuCrkp4mG7j+ZEQsqzgm\na3GVd09J6gCWRcTxqXwS0BURp6fyJUBExOWSDiVLKL8HVkfEjVXFbWY2HB1QdQB1jGHP+eSbSQOV\naW77efWeZGZmg68Zk8Z+kdQ6I/tmZk0kIvrt9q96TKOeLWQXO9WMpfiFT0Bz3hqlq6ur8hgck2Ma\njnE5pmKPopohaYg9B7XvAY5Nd8A8iGwQ89YyDXZ3d7Nq1arGRWhm1qZWrVpFd3d34eOrnnK7lOzi\nqomSNkqaExE7yS5KWkF2+4GeyC4YKqy7u5spU6Y0PF4zs3YzZcqUUkmj0jGNiKh7VXdELAeWD3E4\ng6oZk5hjKsYxFdeMcTmmxqp8ym2jSYquri6mTJnS0v9hzMyGwqpVq1i1ahXz588nCgyEt2XSaLf3\nZGY22CQVShrNMBBuZmYtoi2ThmdPmZkVU3b2lLunzMzM3VNmZtZ4ThpmZlZYWyaN2bPns379sFs+\nwcxs0LXlmAY8zYQJXaxcOZfx4zuqDsnMrOkN8zGNUTz88HzmzVtcdSBmZm2l7W6NnukGprB1666q\nAzEza2q1K8KLatPuqQB2MGvWFVx/fVfVIZmZNb227J6SNF7SdZK+tO8jdzBhQhcLFpw7FGGZmQ0b\nLZU0ImJ9RJzf33GzZl3hQXAzs0FQSfeUpIXAO4HtEXF8rn4a8CmyZLYwIi7v4/lfioj397HPV4Sb\nmZXU7N1Ti4Cp+QpJI4CrU/1kYIakSWnf2ZKulHRU7fChDNbMzDKVJI2IWA082au6E3goIjZExHNA\nDzA9Hb8kIi4CnpX0GeAESRcPadBmZtZUU27HAJty5c1kiWS3iHgC+B/9NZS/Y6MXYzIz21vZqbY1\nlU25ldQBLKuNaUg6A5gaERek8mygMyIuLNmuxzTMzEpq9jGNerYA43LlsamuNK+nYWZWTMuspyHp\naLIzjeNSeSTwIHAasA24G5gREQ+UbNdnGmZmJTX1mYakpcCdwERJGyXNiYidwFxgBXAf0FM2YZiZ\n2eCqZCA8Imb2Ub8cWL6/7Xd3d3sA3MysAN97yt1TZmalNXX3lJmZtSYnDTMzK6wtk4an3JqZFdMy\nU24Hi8c0zMzK85iGmZk1nJOGmZkV5qRhZmaFOWmYmVlhThpmZlZYWyYNT7k1MyumrafcSpoOvAN4\nMfD5iFhZ5xhPuTUzK6nolNuWSho1kl4KfDIiPlhnn5OGmVlJTX2dhqSFkrZLWtOrfpqktZLW9bMG\n+MeBawY3SjMz662qMY1FwNR8haQRwNWpfjIwQ9KktO9sSVdKGi3pMuCbEfGToQ7azGy4qyRpRMRq\n4Mle1Z3AQxGxISKeA3qA6en4JRFxEXAG2cp+Z0q6YChjNjOzihZh6sMYYFOuvJkskewWEVcBV/XX\nUH4mgBdjMjPbW9nFl2qqXCO8g2yN8ONT+QxgakRckMqzgc6IuLBkux4INzMrqakHwvuwBRiXK49N\ndaX5Og0zs2Ja5joNSUeTnWkcl8ojgQfJxiy2AXcDMyLigZLt+kzDzKykpj7TkLQUuBOYKGmjpDkR\nsROYC6wA7gN6yiYMMzMbXJUMhEfEzD7qlwPL97f97u5uD4CbmRVQdkC8Ja8I3xd3T5mZldfU3VNm\nZtaanDTMzKywtkwannJrZlZMy0y5HSwe0zAzK89jGmZm1nBOGmZmVpiThpmZFeakYWZmhTlpmJlZ\nYW2ZNDzl1sysmLaecpuWf/0ocCTw3Yj4bJ1jPOXWzKykolNuWypp1EgS8IWIOKfOvqZKGuvXb2De\nvMVs2bKLMWNGsGDBuYwf31F1WGZmeyiaNCq5y62khcA7ge21lftS/TTgU2TdZgsj4vI6z30X8NfA\nkiEKd8DWr9/AW996FQ8/PB8YBezgrru6WLlyrhOHmbWkqsY0FgFT8xWSRgBXp/rJwIzUHYWksyVd\nKemoiFgWEe8AZg910GXNm7c4lzAARvHww/OZN29xhVGZmQ1cVetprE5rhOd1Ag9FxAYAST3AdGBt\nRCwBlkg6VdIlwMHAN4Y06AHYsmUXLySMmlFs3bqrinDMzPZbJUmjD2OATbnyZrJEsltEfA/43lAG\ntT/GjBkB7GDPxLGD0aPbctKamQ0DzZQ0GiY/fazKFfwWLDiXu+7q2mNMY8KELhYsmFtJPGZmNWVX\n7KupbPZU6p5aVhsIl3QS0B0R01L5EiDqDYb3025Tzp7aunUXo0d79pSZNaemnj2VKD1q7gGOTclk\nG3AWMGMgDTfTGuHjx3dw/fVdVYdhZlZXS6wRLmkpMIXsIr3tQFdELJJ0OntOub1sAG031ZmGmVkr\naOuL+/bFScPMrLxhvQiT7z1lZlZMW997qgifaZiZlTeszzTMzGxwtGXScPeUmVkx7p5y95SZWWnu\nnjIzs4Zz0jAzs8KcNMzMrDAnDTMzK8xJw8zMCmvLpOEpt2ZmxXjKrafcmpmV1rZTbiUdKukeSW+v\nOhYzs+Gm5ZIGcDFwU9VBmJkNR5UkDUkLJW2XtKZX/TRJayWtk3Rxnee9Bbgf+DV7LuBkZmZDoKpF\nmE4Gnga+mFvudQSwDjgN2Eq2kt9ZEbFW0tnAicDhwG+AycAzEfGeOm17TMPMrKSmXu41IlanZV3z\nOoGHImIDgKQeYDqwNiKWAEtqB0o6B3hsqOI1M7NMlWuE9zYG2JQrbyZLJHuJiC/uq6H89LFmWSvc\nzKyZlF0bvKayKbfpTGNZrnvqDGBqRFyQyrOBzoi4sGS77p4yMyupFafcbgHG5cpjU11pvrjPzKyY\nlrm4T9LRZGcax6XySOBBsoHwbcDdwIyIeKBkuz7TMDMrqanPNCQtBe4EJkraKGlOROwE5gIrgPuA\nnrIJw8zMBldVs6dm9lG/HFi+v+13d3d7ANzMrICyA+K+95SZmTV395SZmbUmJw0zMyusLZOGp9ya\nmRXTMlNuB4vHNMzMyvOYhpmZNVy/SUPSSElXDEUwZmbW3PpNGumiu5OHIBYzM2tyRS/uu1fSrcDN\nwI5aZUR8dVCiMjOzplQ0abwIeBx4c64ugKZMGr4i3MysGF8R7tlTZmalNXT2lKSxkm6R9Kv0+Iqk\nsfsfZjmSTpV0u6TPSPrzoX59M7PhruiU20XArcDo9FiW6oZaAL8DDiZb2c/MzIZQ0aTxiohYFBHP\np8di4BUDfVFJCyVtl7SmV/00SWslrZN0ce/nRcTtEfEO4BLgHwf6+mZmNjBFk8bjkmanazZGpqVY\nH9+P110ETM1XSBoBXJ3qJwMzJE1K+86WdKWko9LhTwEH7cfrm5nZABRNGucB7wd+Sbaq3pnAnIG+\naESsBp7sVd0JPBQRGyLiOaAHmJ6OXxIRFwEnSfos8AWyBGNmZkOo3ym3aRnW90bEuwc5ljHAplx5\nM1ki2S0ibgFu6a+h/M23PPXWzGxvZafa1hSacivp7ojo7PfAMi8sdZCtEX58Kp8BTI2IC1J5NtAZ\nEReWbNdTbs3MSio65bboxX13SLoauIk9rwj/8QDjq2cLMC5XHpvqSvPFfWZmxQzKxX2SbqtTHRHx\n5jr1xV5YOprsTOO4VB4JPAicRjZucjcwIyIeKNmuzzTMzEpq2JlGmtX0mYj4UkMiy9pcCkwBjpS0\nEeiKiEWS5gIryAboF5ZNGGZmNrj6TRoRsUvS3wMNSxoRMbOP+uXA8v1t391TZmbFDFb31GXAY+w9\npvFE+RAHl7unzMzKK9o9VTRprK9THRFxzECCG0xOGmZm5TU0abQSJw0zs/IacpfbNJZR235fr32f\nGHh4g6u7u3tAF62YmQ03q1at2uOC6P7s80xD0o8j4sTe2/XKzcJnGmZm5TVqPQ31sV2vbGZmba6/\npBF9bNcrm5lZm+uve2on2RRbAYcAz9R2AS+KiAMHPcKS3D1lZlZeQ64Ij4iRjQvJzMxaXdH1NMzM\nzNozaXjKrZlZMQ2dcttsJAlYABwO3BMRS+oc4zENM7OSGjXlttlMJ1tn449kK/uZmdkQqiRpSFoo\nabukNb3qp0laK2mdpIvrPPU1wB0R8XfAh4ckWDMz262qM41FwNR8RVq34+pUPxmYIWlS2ne2pCuB\nrcCT6Sk7hy5cMzOD4su9NlRErE5rhOd1Ag9FxAYAST1k3VFr09jFEkmHAFdJOgX43pAGbWZm1SSN\nPowBNuXKm8kSyW4R8Xvg/KEMyszMXtBMSaNh8tPHvIKfmdneyq7YV1PZlNvUPbUsIo5P5ZOA7oiY\nlsqXkC30dHnJdj3l1syspFaYciv2vFPuPcCxkjokHQScBdw6kIZ9cZ+ZWTEtcXGfpKXAFOBIYDvQ\nFRGLJJ0OfIosmS2MiMsG0LbPNMzMSmrIDQsHS0TM7KN+ObB8f9vv7u72WIaZWQFlxzZa6jYiRfhM\nw8ysvFYY0zAzsxbjpGFmZoW1ZdLw7Ckzs2JaYvbUYPKYhplZeR7TMDOzhnPSMDOzwpw0zMysMCcN\nMzMrzEnDzMwKa8uk4Sm3ZmbFeMqtp9yamZXW1DcsHChJJwOzyOJ+bUScXHFIZmbDSkueaUiaDvxJ\nRPx7nX0+0zAzK6mpL+6TtFDSdklretVPk7RW0jpJF++jiZnA0sGN0szMeqtqIHwRMDVfIWkEcHWq\nnwzMkDQp7Ttb0pWSjpL0auCpiNgx1EGbmQ13lSSNiFgNPNmruhN4KCI2RMRzQA8wPR2/JCIuioht\nwF+RJR0zMxtizTQQPgbYlCtvJkske4iI7v4ayk8f8wp+ZmZ7K7tiX01lA+GSOoBlEXF8Kp8BTI2I\nC1J5NtAZEReWbNcD4WZmJTX1QHgftgDjcuWxqa40X9xnZlZMy1zcJ+losjON41J5JPAgcBqwDbgb\nmBERD5Rs12caZmYlNfWZhqSlwJ3AREkbJc2JiJ3AXGAFcB/QUzZhmJnZ4KpkIDwiZvZRvxxYvr/t\nd3d3ewDczKyAsgPiLXlF+L64e8rMrLym7p4yM7PW5KRhZmaFtWXS8JRbM7NiWmbK7WDxmIaZWXke\n0zAzs4Zz0jAzs8KcNMzMrDAnDTMzK6wtk4ZnT5mZFePZU549ZWZWWtHZU820CFO/0lKv/wY8TrbK\n3+UVh2RmNqy0WvfUccDNEXE+cELVwZiZDTdV3Rp9oaTtktb0qp8maa2kdZIurvPUu4DzJX0b+NaQ\nBGtmZrtVMqYh6WTgaeCLueVeRwDryBZh2grcA5wVEWslnQ2cCDwB3BYRqyXdHBHvq9O2xzTMzEpq\n6jGN9KXf0au6k2ycYgOApB5gOrA2IpYASyRNBrolzQLWD2nQZmbWVAPhY4BNufJmskSyW0TcB+x1\ndtFbfvqYF2MyM9tb2cWXaqpcI7yDbI3wWvfUGcDUiLgglWcDnRFxYcl23T1lZlZSK96wcAswLlce\nm+pK88V9ZmbFtMzFfZKOJjvTOC6VRwIPkg2EbwPuBmZExAMl2/WZhplZSU19piFpKXAnMFHSRklz\nImInMBdYAdwH9JRNGGZmNriqmj01s4/65cDy/W2/u7vbA+BmZgWUHRD3vafMzKy5u6fMzKw1OWmY\nmVlhbZk0POXWzKyYlplyO1g8pmFmVp7HNMzMrOGcNMzMrDAnDTMzK8xJw8zMCnPSMDOzwtoyaXjK\nrZlZMW095VbSa4Fu4DHguxHxlTrHeMqtmVlJ7Trl9nTg3yLiI8A5VQdjZjbcVHVr9IWStkta06t+\nmqS1ktZJurjOU5cAZ0n6P8DLhiRYMzPbraozjUXA1HyFpBHA1al+MjBD0qS072xJVwIHRMRc4BKy\nLiozMxtCVa2nsTqtEZ7XCTwUERsAJPUA04G1EbEEWCKpQ9K1wKHAJ4c0aDMzqyZp9GEMsClX3kyW\nSHZLCeVD/TWUnwngxZjMzPZWdvGlmirXCO8gWyP8+FQ+A5gaERek8mygMyIuLNmuZ0+ZmZXUirOn\ntgDjcuWxqc7MzJpElUlD6VFzD3BsGrc4CDgLuHUgDfviPjOzYlri4j5JS4EpwJHAdqArIhZJOh34\nFFkyWxgRlw2gbXdPmZmVVLR7qqrZUzP7qF8OLN/f9ru7uz0AbmZWQNkB8Za6jUgRPtMwMyuvFQfC\nzcysyTlpmJlZYW2ZNDx7ysysmJaYPTWYPKZhZlaexzTMzKzhnDTMzKywZrphoQ2R9es3MG/eYrZs\n2cWYMSNYsOBcxo/vfdNhM7O9eUxjmFm/fgNvfetVPPzwfGAUsIMJE7pYuXKuE4fZMOYxDatr3rzF\nuYQBMIqHH57PvHmLK4zKzFpFWyYNT7nt25Ytu3ghYdSMYuvWXVWEY2YV85Rbd0/t0+zZ87nhhr9j\nz8Sxg1mzruD667uqCsvMKtby3VOSxku6TtKXcnWHSlos6VpJdW96aPu2YMG5TJjQBexINdmYxoIF\n51YWk5m1jqZNGhGxPiLO71X9XuDmiPgQ8O4KwhqwZukuGz++g5Ur5zJr1hWccMIHmDXriqYaBG+W\nzynPMRXXjHE5psYa9KQhaaGk7ZLW9KqfJmmtpHWSLi7Y3FheWEd8Z0MDHWTN9I9k/PgOrr++i+nT\nx3P99V1NkzCguT6nGsdUXDPG5ZgaayjONBYBU/MVkkYAV6f6ycAMSZPSvrMlXSnpqNrhuaduIksc\nvevNzGwIDHrSiIjVwJO9qjuBhyJiQ0Q8B/QA09PxSyLiIuBZSZ8BTsididwCnCnpGmDZYMduZmZ7\nGpLZU5I6gGURcXwqnwFMjYgLUnk20BkRFzbgtTx1ysxsAJp2udfBVORNm5nZwFQ1e2oLMC5XHpvq\nzMysiQ1V0hB7DlzfAxwrqUPSQcBZwK1DFIuZmQ3QUEy5XQrcCUyUtFHSnIjYCcwFVgD3AT0R8UAD\nXmsg03gHVV9Tjqsiaayk70q6T9LPJO33OFIjSDpY0g8k3ZviaprL0yWNkPRjSU3xw0bSo5J+mj6r\nu6uOB0DSSyTdLOmB9G/rjRXHMzF9Pj9Of3/TDP/WJf2tpJ9LWiPphvSjuXKSPpr+v+v3O6FtbiOS\npvGuA04DtpKdzZwVEWsrjutk4Gngi7WJABXH8yrgVRHxE0mHAT8Cplf9OUF2xX9EPCNpJHAHcGFE\nVP6lKOlvgdcDh0dE5ReVSnoEeH1E9J6VWBlJi4HvRcQiSQcAh0bEbysOC9j93bAZeGNEbOrv+EGM\nYzSwGpgUEX+UdBPwjYj4YlUxpbgmAzcCfwo8DywH/joiHql3fNNeET4AfU7jrVIfU44rExG/jIif\npO2ngQeAMdVGlYmIZ9LmwWSTNCr/RSNpLPB24LqqY8kRTfT/rqTDgVMiYhFARDzfLAkjeQvwcJUJ\nI2ckMKqWWMl+4FbttcAPIuLZ1At0O9ndN+pqmn94DTCGF64Wh+yXRVN8GTYrSUcDJwA/qDaSTOoG\nuhf4JbAyIu6pOibgX4GP0QQJLCeAlZLukfTBqoMBxgOPSVqUuoM+J+mQqoPK+UuyX9KVioitwL8A\nG8km/jwVEd+uNioAfg6cIukISYeS/Uh6dV8Ht1PSsBJS19SXgY+mM47KRcSuiPivZLPp3ijpdVXG\nI+kdwPZ0ZtZ7MkeV3hQRJ5L9z/2R1AVapQOAE4FrUlzPAJdUG1JG0oFk96m7uQlieSlZ70cHMBo4\nrBluvJq6pi8HVgLfBO5lH7dpaqek4Wm8BaVT4y8DSyLi61XH01vq2rgNmFZxKG8C3p3GEG4E/kJS\npf3PABGxLf39NdldEjqrjYjNwKaI+GEqf5ksiTSD04Efpc+qam8BHomIJ1I30FeB/1ZxTABExKKI\neENETAGeIhsfrqudkkYzT+Ntpl+pAJ8H7o+IT1cdSI2kl0t6Sdo+BHgrUOngfERcGhHjIuIYsn9P\n342Ic6qMKS0PcFjaHgW8jax7oTIRsR3YJGliqjoNuL/CkPJm0ARdU8lG4CRJL5Ikss9pv2eNNoKk\nV6S/44D3AEv7OrZtrgiPiJ2S/oZsGu8IYGEjpvHurzTleApwpKSNQFdtwLCieN4EzAJ+lsYPArg0\nIr5VVUzJUcAX0kyXEcBNEfHNimNqRq8Ebkm3yzkAuCEiVlQcE8CFwA2pO+gRYE7F8ZD6598CXFB1\nLAARcbekL5N1/zyX/n6u2qh2+4qkl5HF9eF9TWRomym3ZmY2+Nqpe8rMzAaZk4aZmRXmpGFmZoU5\naZiZWWFOGmZmVpiThpmZFeakYdYAkv4h3fL6p+n+S3+abjf9oqpjM2skX6dhtp8knUR2I7pTI+L5\ndJHUwWTryLw+Ip6oNECzBvKZhtn+Owp4LCKeB0hJ4kyym9LdJuk7AJLeJulOST+UdFO6YhlJ6yVd\nnhbmuUvSMVW9EbP+OGmY7b8VwLi0auQ1kv48Iq4iu2HmlIg4TdKRwD8Ap0XEG8gWv7oo18aTaZGu\na4CmuSeYWW9tc+8ps6pExA5JJwKnAG8GeiT9r7S7dqPKk4DXAXekm9UdSNZ9VdOT/t5ItoaHWVNy\n0jBrgMgGB28Hbpf0M+ADvQ4RsCIiZvXVRG571yCEaNYQ7p4y20+SJko6Nld1AvAo8Dvg8FR3F/Am\nSRPScw7mRhmHAAAAiUlEQVSV9J9yz/nL9Pcs4PuDG7HZwPlMw2z/HQZcldYDeR74BdntuGcC35K0\nJY1rzAFulHQw2ZnFx4GHUhtHSPop8AeyNSDMmpKn3JpVTNJ6PDXXWoS7p8yq519u1jJ8pmFmZoX5\nTMPMzApz0jAzs8KcNMzMrDAnDTMzK8xJw8zMCnPSMDOzwv4/dcq4coo/djMAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10dd0e310>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "m = 3\n",
     "A = numpy.array([[2, 1, 1], [1, 3, 1], [1, 1, 4]])\n",
@@ -462,10 +465,11 @@
     "    v[k, :] = w / numpy.linalg.norm(w, ord=2)\n",
     "    lam[k] = numpy.dot(v[k,:], numpy.dot(A, v[k, :]))\n",
     "    \n",
+    "print lam[num_steps-1]\n",
     "fig = plt.figure()\n",
     "axes = fig.add_subplot(1, 1, 1)\n",
     "axes.semilogy(range(10), numpy.abs(lam - numpy.linalg.eigvals(A)[0]), 'o')\n",
-    "\n",
+    "print 'lam',numpy.linalg.eigvals(A)[0]\n",
     "axes.set_title(\"Convergence of eigenvalue\")\n",
     "axes.set_xlabel(\"Step\")\n",
     "axes.set_ylabel(\"Error\")\n",
@@ -488,14 +492,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  4.166667e+00   1.095445e+00  -1.267105e+00]\n",
+      " [  1.095445e+00   2.000000e+00  -1.395822e-17]\n",
+      " [ -1.267105e+00   1.194656e-16   2.833333e+00]]\n",
+      "[[ 5.090909  0.15743   0.623249]\n",
+      " [ 0.15743   1.86182  -0.54704 ]\n",
+      " [ 0.623249 -0.54704   2.047271]]\n",
+      "[[ 5.198682 -0.075903 -0.207275]\n",
+      " [-0.075903  2.181835  0.496554]\n",
+      " [-0.207275  0.496554  1.619484]]\n",
+      "[[ 5.211648 -0.065892  0.058223]\n",
+      " [-0.065892  2.363696 -0.321368]\n",
+      " [ 0.058223 -0.321368  1.424655]]\n",
+      "[[ 5.213778 -0.035826 -0.01528 ]\n",
+      " [-0.035826  2.430805  0.183737]\n",
+      " [-0.01528   0.183737  1.355417]]\n",
+      "[[  5.214202e+00  -1.758371e-02   3.920120e-03]\n",
+      " [ -1.758371e-02   2.451920e+00  -1.007513e-01]\n",
+      " [  3.920120e-03  -1.007513e-01   1.333877e+00]]\n",
+      "[[  5.214294e+00  -8.392060e-03  -9.988671e-04]\n",
+      " [ -8.392060e-03   2.458212e+00   5.453885e-02]\n",
+      " [ -9.988671e-04   5.453885e-02   1.327494e+00]]\n",
+      "[[  5.214314e+00  -3.973357e-03   2.540044e-04]\n",
+      " [ -3.973357e-03   2.460055e+00  -2.940989e-02]\n",
+      " [  2.540044e-04  -2.940989e-02   1.325631e+00]]\n",
+      "[[  5.214318e+00  -1.876920e-03  -6.455358e-05]\n",
+      " [ -1.876920e-03   2.460591e+00   1.584128e-02]\n",
+      " [ -6.455358e-05   1.584128e-02   1.325090e+00]]\n",
+      "[[  5.214319e+00  -8.860220e-04   1.640309e-05]\n",
+      " [ -8.860220e-04   2.460747e+00  -8.529903e-03]\n",
+      " [  1.640309e-05  -8.529903e-03   1.324933e+00]]\n",
+      "True eigenvalues: \n",
+      "[ 5.21432   2.460811  1.324869]\n",
+      "Computed eigenvalues: \n",
+      "5.21431945819\n",
+      "2.46074735686\n",
+      "1.32493318495\n"
+     ]
+    }
+   ],
    "source": [
     "%precision 6\n",
     "m = 3\n",
@@ -612,13 +659,54 @@
     "\n",
     "This algorithm is actually the one used most often used if both eigenvalues and eigenvectors are needed and performs up to twice as fast as the $QR$ approach.  The basic idea is to split the matrix into two pieces at every iteration by introducing zeros on the appropriate off-diagonals which neatly divides the problem into two pieces."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  1.  1.  1.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = numpy.empty((num_steps, 4))\n",
+    "m = 4\n",
+    "w[0, :] = numpy.ones(m)\n",
+    "print w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
